--- a/library.properties
+++ b/library.properties
@@ -3,7 +3,7 @@ version=0.99.9
 author=tzapu
 maintainer=bbx10
 sentence=ESP8266/ESP32 WiFi Connection manager with fallback web configuration portal
-paragraph=Library for configuring ESP8266 modules WiFi credentials at runtime.
+paragraph=Library for configuring ESP8266 and ESP32 modules WiFi credentials at runtime.
 category=Communication
 url=https://github.com/admarschoonen/WIFIMANAGER-ESP32
 architectures=esp8266,esp32
